--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </head>
 <body>
-    <h1>Bienvenue dans la démo Three.js</h1>
+    <h1>Bienvenue dans la démo Three.js de Balci Ugur</h1>
     <script>
         // Créer une scène
         var scene = new THREE.Scene();
