Update logo.html with new 3D logo implementation

--- a/exemple1/index.html
+++ b/exemple1/index.html
@@ -1,9 +1,10 @@
+<!-- Main page that loads the Three.js scene with all the basic content -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mon Projet Three.js</title>
+  <title>TER Three.js</title>
   <style>
     body { margin: 0; }
     canvas { display: block; }
